config and blueprint loading is now done in .wsgi file (and startDevServer.py) instead of __init__.py

--- a/instruments.wsgi.example
+++ b/instruments.wsgi.example
@@ -4,3 +4,4 @@ sys.path.append('/path/to/instruments')
 
 from instruments import app as application
 application.config.from_pyfile('/path/to/settings.cfg')
+application.load_blueprints()
